--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -20,8 +20,8 @@ startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 기감1층
-bosstime = 20:00
+bossname = 기감1층6
+bosstime = 06:00
 genPeriod = 24:00
 startDate = 2021-01-29
 before_alert_ment = 입니다
@@ -34,8 +34,8 @@ startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 기감2층
-bosstime = 21:00
+bossname = 기감2층7
+bosstime = 07:00
 genPeriod = 24:00
 startDate = 2021-01-29
 before_alert_ment = 입니다
@@ -48,15 +48,40 @@ startDate = 2021-01-29
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
+bossname = 기감1층12
+bosstime = 12:00
+genPeriod = 24:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 기감1층18
+bosstime = 18:00
+genPeriod = 24:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 기감1층24
+bosstime = 00:00
+genPeriod = 24:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
+bossname = 기감2층14
+bosstime = 14:00
+genPeriod = 24:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
-
-
-
-
-
+bossname = 기감2층21
+bosstime = 21:00
+genPeriod = 24:00
+startDate = 2021-01-29
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
 
 
 
